[package]
name = "fonts"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "fonts"
path = "lib.rs"
test = true
doctest = false

[features]
tracing = ["dep:tracing"]

[dependencies]
app_units = { workspace = true }
base = { workspace = true }
bitflags = { workspace = true }
content-security-policy = { workspace = true }
euclid = { workspace = true }
fonts_traits = { workspace = true }
fontsan = { version = "0.6.1" }
# FIXME (#34517): macOS only needs this when building libservo without `--features media-gstreamer`
harfbuzz-sys = { workspace = true, features = ["bundled"] }
itertools = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
malloc_size_of = { workspace = true }
malloc_size_of_derive = { workspace = true }
memmap2 = { workspace = true }
net_traits = { workspace = true }
num-traits = { workspace = true }
paint_api = { workspace = true }
parking_lot = { workspace = true }
profile_traits = { workspace = true }
read-fonts.workspace = true
serde = { workspace = true }
servo-tracing = { workspace = true }
servo_arc = { workspace = true }
servo_config = { path = "../config" }
servo_url = { path = "../url" }
skrifa = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
stylo = { workspace = true }
stylo_atoms = { workspace = true }
tracing = { workspace = true, optional = true }
unicode-properties = { workspace = true }
unicode-script = { workspace = true }
url = { workspace = true }
webrender_api = { workspace = true }
regex.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
byteorder = { workspace = true }
objc2 = { workspace = true }
objc2-core-foundation = { workspace = true }
objc2-core-graphics = { workspace = true }
objc2-core-text = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
freetype-sys = { workspace = true }
servo_allocator = { path = "../allocator" }

[target.'cfg(all(target_os = "linux", not(target_env = "ohos")))'.dependencies]
fontconfig_sys = { package = "yeslogic-fontconfig-sys", version = "6" }

[target.'cfg(target_os = "android")'.dependencies]
ndk = {version = "0.9.0", features = ["api-level-29"]}
xml = "1.1"

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = { workspace = true }
winapi = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ohos_mock)'] }
