[package]
name = "geolocation"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"
doctest = false
test = false

[dependencies]
geolocation_traits = { workspace = true }
ipc-channel = "0.20"
